--- a/maquetacion/styles/utils/_variables.scss
+++ b/maquetacion/styles/utils/_variables.scss
@@ -1,2 +1,11 @@
-$main-color: rgb(103, 78, 240);
+$main-color: rgb(32, 179, 224);
+$body-bk-color: #eee;
+$header-bk-color: #fff;
+$card-bk-color: #fff;
+$available-bk-color: rgb(123, 221, 84);
+$footer-bk-color: rgb(38, 57, 92);
 
+$shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
+
+$top-header-height: 80px;
+$bottom-header-height: 80px;
